web-infras/parser/tests/fixtures/babel/es2015/class-methods/direct-super-in-object-method/output.txt
[SyntaxError]: super() is only valid in derived class constructors (4,14)
4|      return super.foo;
 |            ^
